@@ -10,6 +10,10 @@
   * src/tap/parport/ppi.c (ppi_connect): Fix return type to match expected,
     and tweak style to match ppdev.c better.
 
+  * src/tap/idcode.c (urj_tap_idcode): Fix typo in comment (bits, not bytes),
+    fix local types so we don't mismatch signs, and avoid leaking register
+    allocations with the error handling.
+
 2010-05-19  Arnim Laeuger  <arniml>
 
   * src/flash/amd.c, doc/UrJTAG.txt: [ 2996919 ] Support for MX29LV320C
